<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AskForADonation"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"

        >
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collappsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:contentScrim="?attr/colorPrimary"
            app:title="Get Donation"
            app:titleEnabled="true"
            app:expandedTitleMarginStart="10sp"
            app:expandedTitleMarginEnd="60sp"
            android:background="@drawable/getdonation">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tool_bar_id"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60sp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.demotxt.droidsrce.homedashboard.Home"
            android:orientation="vertical"
            android:padding="10dp"
            android:paddingBottom="30sp"
            android:background="#fcfcfc"
            android:gravity="center"
            android:id="@+id/ll"
            >
    

                <androidx.cardview.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:id="@+id/ask_medical_donation"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="top"
                        android:background="@drawable/cerclebackgroundpurple"
                        android:weightSum="100"
                        android:paddingTop="20sp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_weight="65"
                            android:layout_marginLeft="15sp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="24sp"
                                android:layout_marginTop="10dp"
                                android:textColor="@color/White"
                                android:text="Medical"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="start"
                                android:textSize="20sp"
                                android:text="@string/req_medical"
                                android:padding="5dp"
                                android:textColor="@android:color/white"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="35"
                            android:orientation="vertical"
                            android:gravity="center">
                            <ImageView
                                android:layout_width="80sp"
                                android:layout_height="80sp"
                                android:src="@drawable/ic_heart_problem"
                                android:padding="10dp"
                                android:tint="@color/White"
                                /></LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/ask_event_donation"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="top"
                        android:background="@drawable/cerclebackgroundblue"
                        android:weightSum="100"
                        android:paddingTop="20sp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_weight="65"
                            android:layout_marginLeft="15sp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="24sp"
                                android:layout_marginTop="10dp"
                                android:textColor="@color/White"
                                android:text="Others"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="start"
                                android:textSize="20sp"
                                android:text="@string/req_event"
                                android:padding="5dp"
                                android:textColor="@android:color/white"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="35"
                            android:orientation="vertical"
                            android:gravity="center">
                            <ImageView
                                android:layout_width="80sp"
                                android:layout_height="80sp"
                                android:src="@drawable/ic_cash1"
                                android:padding="10dp"/></LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>



                <androidx.cardview.widget.CardView
                    android:id="@+id/ask_blood_donation"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="top"
                        android:weightSum="100"
                        android:background="@drawable/cerclebackgroundgreen"
                        android:paddingTop="20sp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_weight="65"
                            android:layout_marginLeft="15sp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="24sp"
                                android:textColor="@color/White"
                                android:layout_marginTop="10dp"
                                android:text="Blood"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="start"
                                android:textSize="20sp"
                                android:text="@string/req_blood"
                                android:padding="5dp"
                                android:textColor="@android:color/white"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="35"
                            android:orientation="vertical"
                            android:gravity="center">
                            <ImageView
                                android:layout_width="80sp"
                                android:layout_height="80sp"
                                android:src="@drawable/ic_blood_drop"
                                android:padding="10dp"/></LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/ask_cloth_donation"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="top"
                        android:weightSum="100"
                        android:background="@drawable/cerclebackgroundyello"
                        android:paddingTop="20sp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_weight="65"
                            android:layout_marginLeft="15sp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="24sp"
                                android:textColor="@color/White"
                                android:layout_marginTop="10dp"
                                android:text="Clothes"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="start"
                                android:textSize="20sp"
                                android:text="@string/req_cloth"
                                android:padding="5dp"
                                android:textColor="@android:color/white"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="35"
                            android:orientation="vertical"
                            android:gravity="center">
                            <ImageView
                                android:layout_width="80sp"
                                android:layout_height="80sp"
                                android:padding="10dp"
                                android:src="@drawable/ic_shirt" /></LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>




                <androidx.cardview.widget.CardView
                    android:id="@+id/ask_food_donation"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="top"
                        android:weightSum="100"
                        android:background="@drawable/cerclebackgroundred"
                        android:paddingTop="20sp"
                        >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_weight="65"
                            android:layout_marginLeft="15sp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="24sp"
                                android:textColor="@color/White"
                                android:layout_marginTop="10dp"
                                android:text="Food"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="start"
                                android:textSize="20sp"
                                android:text="@string/req_food"
                                android:padding="5dp"
                                android:textColor="@android:color/white"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="35"
                            android:orientation="vertical"
                            android:gravity="center">
                            <ImageView
                                android:layout_width="80sp"
                                android:layout_height="80sp"
                                android:src="@drawable/ic_turkey"
                                android:padding="10dp"/> /></LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>


            
        </androidx.core.widget.NestedScrollView>
     
    
</androidx.coordinatorlayout.widget.CoordinatorLayout>